--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
       max-width: 90%;
       max-height: 90%;
       border-radius: 0.5rem;
+      transform: scale(1.25);
+      transform-origin: center;
     }
     .modal.active {
       display: flex;
