--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -105,7 +104,9 @@
         padding: 0.75rem;
         background-color: #000000;
         border-radius: 0.5rem;
-        z-index: 1000;
+       
+
+ z-index: 1000;
       }
       #maxClientsRadios {
         display: grid;
@@ -166,7 +167,7 @@
       max-width: 70%;
       margin: 0.5rem 1rem;
       padding: 0.25rem 1rem;
-      border-radius: 1rem;
+      border wokół: 1rem;
       word-wrap: break-word;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     }
@@ -200,6 +201,30 @@
       border-radius: 0.5rem;
     }
     .modal.active {
+      display: flex;
+    }
+    .help-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      z-index: 2000;
+      align-items: center;
+      justify-content: center;
+    }
+    .help-modal-content {
+      background-color: white;
+      padding: 1.5rem;
+      border-radius: 0.5rem;
+      max-width: 90%;
+      max-height: 90%;
+      overflow-y: auto;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .help-modal.active {
       display: flex;
     }
     #chatContainer.hidden {
@@ -331,6 +356,17 @@
       opacity: 0.6;
       cursor: not-allowed;
     }
+    #helpButton {
+      background-color: #6b7280;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 0.375rem;
+      cursor: pointer;
+      transition: all 0.2s ease;
+    }
+    #helpButton:hover {
+      background-color: #4b5563;
+    }
     @media (min-width: 1025px) {
       .bg-white {
         margin-top: -40px;
@@ -402,12 +438,22 @@
         <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors">Back</button>
       </div>
       <div class="text-center mt-4">
-        <a href="https://github.com/cooptroop1/anonmess/wiki/Troubleshooting" target="_blank" class="text-blue-500 hover:underline">Connection issues? Get help</a>
+        <button id="helpButton" class="text-blue-500 hover:underline">Help</button>
       </div>
     </div>
     <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
       <span class="text-white mb-2 font-bold">Max Users</span>
       <div id="maxClientsRadios" class="flex flex-col space-y-2"></div>
+    </div>
+  </div>
+  <div id="helpModal" class="help-modal">
+    <div class="help-modal-content">
+      <h2 class="text-xl font-bold mb-4">Button Help</h2>
+      <p><strong>Start Chat:</strong> Starts New Chat</p>
+      <p><strong>Connect to Chat:</strong> This connects you to a chat that you have code for</p>
+      <p><strong>Send Code:</strong> This sends your code to Random chat board</p>
+      <p><strong>Random Chat:</strong> This takes you to random chat board for a random chat</p>
+      <p><strong>Copy Code:</strong> Copies the code so you can send to people in text or social chats</p>
     </div>
   </div>
   <script>
@@ -551,6 +597,17 @@
     const messages = document.getElementById('messages');
     const cornerLogo = document.getElementById('cornerLogo');
     const button2 = document.getElementById('button2');
+    const helpButton = document.getElementById('helpButton');
+    const helpModal = document.getElementById('helpModal');
+
+    // Help modal toggle
+    helpButton.addEventListener('click', () => {
+      helpModal.classList.add('active');
+    });
+
+    helpModal.addEventListener('click', () => {
+      helpModal.classList.remove('active');
+    });
 
     // Logo cycle animation
     let cycleTimeout;
