--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
       flex-direction: column;
       gap: 0.5rem;
       position: relative;
+      padding-bottom: 3rem; /* Space for help text below input container */
     }
     .input-container {
       display: flex;
@@ -252,7 +253,7 @@
       gap: 0.25rem; /* Tightened for mobile */
       padding: 0 0rem;
       position: absolute;
-      bottom: -3rem;
+      bottom: 1.5rem; /* Adjusted to make room for help text */
       width: 100%;
       box-sizing: border-box;
       z-index: 10;
@@ -365,16 +366,19 @@
       opacity: 0.6;
       cursor: not-allowed;
     }
-    #helpButton {
-      background-color: #6b7280;
-      color: white;
-      padding: 0.5rem 1rem;
-      border-radius: 0.375rem;
+    #helpText {
+      color: #3b82f6;
       cursor: pointer;
-      transition: all 0.2s ease;
+      transition: color 0.2s ease;
     }
-    #helpButton:hover {
-      background-color: #4b5563;
+    #helpText:hover {
+      color: #1d4ed8;
+    }
+    #chatContainer:not(.hidden) .help-container {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
     }
     @media (min-width: 1025px) {
       .bg-white {
@@ -439,15 +443,15 @@
           <button id="imageButton" title="Send Image">📷</button>
           <button id="sendButton">📤</button>
         </div>
+        <div class="help-container text-center mt-4">
+          <span id="helpText" class="text-blue-500 hover:underline">Help</span>
+        </div>
       </div>
       <div id="connectContainer" class="hidden">
         <input id="usernameConnectInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter your username (1-16 chars)">
         <input id="codeInput" type="text" class="border border-gray-300 p-2 w-full mb-2 rounded" placeholder="Enter code (xxxx-xxxx-xxxx-xxxx)">
         <button id="connectButton" class="bg-green-500 text-white px-4 py-2 rounded w-full hover:bg-green-600 transition-colors">Connect</button>
         <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors">Back</button>
-      </div>
-      <div class="text-center mt-4">
-        <button id="helpButton" class="text-blue-500 hover:underline">Help</button>
       </div>
     </div>
     <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
@@ -457,7 +461,7 @@
   </div>
   <div id="helpModal" class="help-modal">
     <div class="help-modal-content">
-      <h2 class="text-xl font-bold mb-4">Button Help</h2>
+      <h2 class="text-xl font-bold mb-4">Help</h2>
       <p><strong>Start Chat:</strong> Starts New Chat</p>
       <p><strong>Connect to Chat:</strong> This connects you to a chat that you have code for</p>
       <p><strong>Send Code:</strong> This sends your code to Random chat board</p>
@@ -604,11 +608,11 @@
     const messages = document.getElementById('messages');
     const cornerLogo = document.getElementById('cornerLogo');
     const button2 = document.getElementById('button2');
-    const helpButton = document.getElementById('helpButton');
+    const helpText = document.getElementById('helpText');
     const helpModal = document.getElementById('helpModal');
 
     // Help modal toggle
-    helpButton.addEventListener('click', () => {
+    helpText.addEventListener('click', () => {
       helpModal.classList.add('active');
     });
 
