--- a/index.html
+++ b/index.html
@@ -201,6 +201,30 @@
     .modal.active {
       display: flex;
     }
+    .help-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.7);
+      z-index: 2000;
+      align-items: center;
+      justify-content: center;
+    }
+    .help-modal-content {
+      background-color: white;
+      padding: 1.5rem;
+      border-radius: 0.5rem;
+      max-width: 90%;
+      max-height: 90%;
+      overflow-y: auto;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .help-modal.active {
+      display: flex;
+    }
     #chatContainer.hidden {
       display: none;
       visibility: hidden;
@@ -216,8 +240,8 @@
       align-items: flex-start;
       gap: 0.25rem; /* Tightened for mobile */
       padding: 0 0rem;
-      position: absolute;
-      bottom: -3rem;
+      position: relative;
+      margin-top: 0.5rem;
       width: 100%;
       box-sizing: border-box;
       z-index: 10;
@@ -330,6 +354,14 @@
       opacity: 0.6;
       cursor: not-allowed;
     }
+    #helpText {
+      color: #3b82f6;
+      cursor: pointer;
+      transition: color 0.2s ease;
+    }
+    #helpText:hover {
+      color: #1d4ed8;
+    }
     @media (min-width: 1025px) {
       .bg-white {
         margin-top: -40px;
@@ -401,12 +433,22 @@
         <button id="backButtonConnect" class="bg-gray-500 text-white px-4 py-2 rounded w-full mt-2 hover:bg-gray-600 transition-colors">Back</button>
       </div>
       <div class="text-center mt-4">
-        <a href="https://github.com/cooptroop1/anonmess/wiki/Troubleshooting" target="_blank" class="text-blue-500 hover:underline">Connection issues? Get help</a>
+        <span id="helpText" class="text-blue-500 hover:underline">Help</span>
       </div>
     </div>
     <div id="maxClientsContainer" class="hidden flex flex-col justify-center bg-black p-4 rounded-lg shadow-lg">
       <span class="text-white mb-2 font-bold">Max Users</span>
       <div id="maxClientsRadios" class="flex flex-col space-y-2"></div>
+    </div>
+  </div>
+  <div id="helpModal" class="help-modal">
+    <div class="help-modal-content">
+      <h2 class="text-xl font-bold mb-4">Help</h2>
+      <p><strong>Start Chat:</strong> Starts New Chat</p>
+      <p><strong>Connect to Chat:</strong> This is where you enter the code from a friend</p>
+      <p><strong>Send Code:</strong> This sends your code to the Random chat board</p>
+      <p><strong>Random Chat:</strong> This takes you to random chat board to pick a code</p>
+      <p><strong>Copy Code:</strong> Copies the code so you can send to people in text or other</p>
     </div>
   </div>
   <script>
@@ -550,6 +592,17 @@
     const messages = document.getElementById('messages');
     const cornerLogo = document.getElementById('cornerLogo');
     const button2 = document.getElementById('button2');
+    const helpText = document.getElementById('helpText');
+    const helpModal = document.getElementById('helpModal');
+
+    // Help modal toggle
+    helpText.addEventListener('click', () => {
+      helpModal.classList.add('active');
+    });
+
+    helpModal.addEventListener('click', () => {
+      helpModal.classList.remove('active');
+    });
 
     // Logo cycle animation
     let cycleTimeout;
