--- a/index.html
+++ b/index.html
@@ -164,10 +164,18 @@
     .message-bubble {
       max-width: 70%;
       margin: 0.5rem 1rem;
-      padding: 0.25rem 1rem;
+      padding: 0.25rem 0.5rem; /* Reduced padding for tighter fit */
       border-radius: 1rem;
       word-wrap: break-word;
       box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+      display: inline-flex; /* Changed to inline-flex for better content wrapping */
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    .message-bubble img {
+      max-width: 100%; /* Ensure image fits within bubble */
+      border-radius: 0.5rem; /* Match bubble's rounded corners */
+      margin-top: 0.25rem; /* Small gap between username and image */
     }
     .message-bubble.self {
       background-color: #3b82f6;
@@ -530,7 +538,7 @@
       messageDiv.textContent = `${username}: `;
       const imgElement = document.createElement('img');
       imgElement.src = base64;
-      imgElement.style.maxWidth = '70%';
+      imgElement.style.maxWidth = '100%';
       imgElement.style.borderRadius = '0.5rem';
       imgElement.style.cursor = 'pointer';
       imgElement.addEventListener('click', () => {
@@ -993,7 +1001,7 @@
           messageDiv.textContent = `${senderUsername}: `;
           const img = document.createElement('img');
           img.src = data.data;
-          img.style.maxWidth = '70%';
+          img.style.maxWidth = '100%';
           img.style.borderRadius = '0.5rem';
           img.style.cursor = 'pointer';
           img.addEventListener('click', () => {
