--- a/index.html
+++ b/index.html
@@ -324,28 +324,23 @@
     .button-group {
       display: flex;
       justify-content: space-between;
-      margin-top: 0.5rem;
-      margin-bottom: 0.5rem;
+      margin: 0.5rem 1rem; /* Match pink chat box margins */
+      width: calc(100% - 2rem); /* Match pink chat box width */
+      box-sizing: border-box;
     }
     .button-group button {
       padding: 0.35rem 0.9rem;
       border-radius: 0.375rem;
       cursor: pointer;
-      margin: 0 0.25rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
-      width: 33.3%;
-    }
-    #copyCodeButton {
-      background-color: #10b981;
-      color: white;
-    }
-    #copyCodeButton:hover {
-      background-color: #059669;
+      flex: 1; /* Equal width for all buttons */
+      margin: 0 0.25rem; /* Maintain gaps between buttons */
     }
     #button1 {
       background-color: #9b59b6;
       color: white;
+      margin-left: 0; /* Align with left edge of pink chat box */
     }
     #button1:hover {
       background-color: #8e44ad;
@@ -361,6 +356,14 @@
       background-color: #d4a017;
       opacity: 0.6;
       cursor: not-allowed;
+    }
+    #copyCodeButton {
+      background-color: #10b981;
+      color: white;
+      margin-right: 0; /* Align with right edge of pink chat box */
+    }
+    #copyCodeButton:hover {
+      background-color: #059669;
     }
     #helpText {
       color: #3b82f6;
@@ -385,10 +388,14 @@
       }
     }
     @media (max-width: 640px) {
+      .button-group {
+        margin: 0.5rem 0.5rem; /* Adjusted for mobile to match pink chat box */
+        width: calc(100% - 1rem); /* Match pink chat box width on mobile */
+      }
       .button-group button {
         padding: 0.8rem 0.9rem;
         font-size: 0.9rem;
-        width: calc(33.33% - 0.5rem);
+        margin: 0 0.125rem; /* Smaller gaps for mobile */
       }
       h1.text-3xl {
         font-size: 1.5rem;
